# audio-toolkit

./: .gitignore  CMakeLists.txt  Debug.mk  Makefile  README.md  Release.mk  Tests.mk  audio-toolkit.sublime-project  build_app.mk  nr-audio-lib.sublime-project
project/cmake/: FindLibLame.cmake  FindLibMPG123.cmake  FindLibOgg.cmake  FindLibVorbis.cmake  FindLibVorbisEnc.cmake  GenerateHeaders.cmake  GetIncludeDirectories.cmake  GitDescribe.cmake  Header.cmake.in  SublimeText.cmake  SublimeText.cmake.in  Version.cc.cmake.in  Version.h.cmake.in
sources/: CMakeLists.txt  main.cc  main.cpp
sources/audio/: CMakeLists.txt  audio_buffer.cc  audio_buffer.cpp  audio_buffer.h  audio_codec.cc  audio_codec.h  audio_const_frame.cpp  audio_const_frame.h  audio_const_sequence.cpp  audio_const_sequence.h  audio_error.cc  audio_error.cpp  audio_error.h  audio_format.cc  audio_format.cpp  audio_format.h  audio_frame.cpp  audio_frame.h  audio_frame_container.h  audio_generator.h  audio_generator_engine_noise.cpp  audio_generator_engine_noise.h  audio_generator_engine_sawtooth.cpp  audio_generator_engine_sawtooth.h  audio_generator_engine_sine.cpp  audio_generator_engine_sine.h  audio_generator_engine_square.cpp  audio_generator_engine_square.h  audio_generator_engine_triangle.cpp  audio_generator_engine_triangle.h  audio_metadata.h  audio_sample.h  audio_sequence.cc  audio_sequence.cpp  audio_sequence.h  codec  frame  frame_container  generator
sources/audio/codecs/: audio_coder.cc  audio_coder.cpp  audio_coder.h  audio_decoder.cc  audio_decoder.cpp  audio_decoder.h  audio_mp3_codec.cc  audio_mp3_codec.cpp  audio_mp3_coder.h  audio_mp3_decoder.h  audio_ogg_vorbis_coder.cc  audio_ogg_vorbis_coder.h  audio_ogg_vorbis_decoder.h  audio_pcm_codec.cpp  audio_pcm_coder.h  audio_pcm_decoder.h  audio_wave_codec.cc  audio_wave_coder.h  audio_wave_decoder.h
sources/audio/debug/: audio_debug.cc  audio_debug.h
sources/audio/generators/: audio_noise.cc  audio_noise.h  audio_sawtooth.cc  audio_sawtooth.h  audio_sine.cc  audio_sine.h  audio_square.cc  audio_square.h  audio_triangle.cc  audio_triangle.h
sources/includes/audio/: buffer  codec  const_sequence  error  format  frame  sample  sequence
sources/includes/audio/codecs/: coder
sources/includes/utils/: buffer  dynamic_buffer  static_buffer
sources/tests/: CMakeLists.txt  main.cc  tests_audio_buffer.cpp  tests_audio_format.cpp
sources/utils/: abstract_buffer  buffer  dynamic_buffer  static_buffer  utils_abstract_buffer.h  utils_buffer.cc  utils_buffer.h  utils_dynamic_buffer.cpp  utils_dynamic_buffer.h  utils_pimpl.h  utils_static_buffer.cpp  utils_static_buffer.h
